<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_ticky"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:srcCompat="@drawable/ic_ticky" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                android:src="@drawable/ic_ticky"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:srcCompat="@drawable/ic_ticky" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/msemibold"
                android:text="@string/reg"
                android:textColor="#000"
                android:textSize="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="clear_text"
                android:id="@+id/email_phone_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/email"
                app:boxBackgroundColor="#FAFAFA"
                app:boxStrokeColor="@color/BoxStrokeColor"
                app:boxStrokeErrorColor="@color/error_color"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color"
                app:hintTextColor="@color/BoxStrokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:imeOptions="actionNext"
                    android:id="@+id/email_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/mlight"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/text_cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:endIconMode="clear_text"
                android:imeOptions="actionNext"
                android:id="@+id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/name"
                app:boxBackgroundColor="#FAFAFA"
                app:boxStrokeColor="@color/BoxStrokeColor"
                app:boxStrokeErrorColor="@color/error_color"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color"
                app:hintTextColor="@color/BoxStrokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_phone_layout"
                app:startIconDrawable="@drawable/ic_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/mlight"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/text_cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/pass"
                app:boxBackgroundColor="#FAFAFA"
                app:boxStrokeColor="@color/BoxStrokeColor"
                app:boxStrokeErrorColor="@color/error_color"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color"
                app:hintTextColor="@color/BoxStrokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_layout"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/mlight"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/text_cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass2_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="86dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/pass_confirm"
                app:boxBackgroundColor="#FAFAFA"
                app:boxStrokeColor="@color/BoxStrokeColor"
                app:boxStrokeErrorColor="@color/error_color"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color"
                app:hintTextColor="@color/BoxStrokeColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass_layout"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/mlight"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/text_cursor_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/via_email"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/via_email_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/BoxStrokeColor">

                    <TextView
                        android:id="@+id/via_email_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:gravity="center"
                        android:text="@string/via_email"
                        android:textColor="#FFF"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/via_phone"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toEndOf="@+id/via_email"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/via_phone_l"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/via_phone_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:gravity="center"
                        android:text="@string/via_telephone"
                        android:textColor="#000000"
                        android:textSize="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_ticky"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pass2_layout"
                app:srcCompat="@drawable/ic_ticky" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/ic_ticky"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/ic_ticky" />

            <TextView
                android:id="@+id/pass_len_validator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mmed"
                android:text="@string/pass_len"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/pass2_layout" />

            <TextView
                android:id="@+id/latinLetterValidator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="11dp"
                android:fontFamily="@font/mmed"
                android:text="@string/big_letters"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/pass_len_validator" />

            <TextView
                android:id="@+id/digitsValidator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mmed"
                android:text="@string/digits"
                android:textSize="14dp"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/latinLetterValidator" />

            <TextView
                android:id="@+id/symbols_validator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/mmed"
                android:text="@string/spec_symbols"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/digitsValidator" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:height="60dp"
        android:fontFamily="@font/mlight"
        android:text="@string/regin"
        android:textAllCaps="false"
        android:textSize="14dp"
        app:backgroundTint="@color/BoxStrokeColor"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
