<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/msemibold"
        android:text="@string/auth"
        android:textColor="#000"
        android:textSize="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_phone_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        app:boxBackgroundColor="#FAFAFA"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:boxStrokeErrorColor="@color/error_color"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="@color/BoxStrokeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/mlight"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textCursorDrawable="@drawable/text_cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/pass"
        app:boxBackgroundColor="#FAFAFA"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:boxStrokeErrorColor="@color/error_color"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextColor="@color/error_color"
        app:hintTextColor="@color/BoxStrokeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_phone_layout"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/mlight"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/text_cursor_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:height="60dp"
        android:fontFamily="@font/mlight"
        android:text="@string/regin"
        android:textAllCaps="false"
        android:textSize="14dp"
        app:backgroundTint="@color/BoxStrokeColor"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:height="60dp"
        android:drawableLeft="@drawable/ic_google"
        android:fontFamily="@font/mlight"
        android:text="@string/regin"
        android:textAllCaps="false"
        android:textColor="#6A6A6A"
        android:textSize="14dp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_vk"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:height="60dp"
        android:drawableLeft="@drawable/ic_vk"
        android:fontFamily="@font/mlight"
        android:text="@string/regin"
        android:textAllCaps="false"
        android:textColor="#6A6A6A"
        android:textSize="14dp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forgot_pass"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:height="60dp"
        android:fontFamily="@font/mmed"
        android:text="@string/forgot_pass"
        android:textAllCaps="false"
        android:textColor="@color/BoxStrokeColor"
        android:textSize="14dp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_auth"
        app:rippleColor="#6979D3" />

</androidx.constraintlayout.widget.ConstraintLayout>